# Project-Chronicle

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE_SESSION_CONTEXT.md  DEPLOYMENT_STATUS_HANDOFF.md  Dockerfile.chronicle  Makefile  PHASE_2_1_REPORT.md  README.md  README_TESTING.md  all_brands_benchmark_20250825_134741.json  benchmark_report_economist_20250825_134842.json  benchmark_report_vogue_20250825_134735.json  buildspec-evaluation.yml  buildspec-model-service.yml  buildspec-orchestrator.yml  database.py  db_deps.py  docker-compose.yml  generate_test_data.py  main.py  pyproject.toml  quick_start.py  repomix-output.xml  requirements.txt  start_local.py  test_accuracy_calculation.py  test_end_to_end.py  test_evaluation_service.py  test_local_setup.py  test_parameter_management.py  test_total.py  test_xml_system.py
.github/workflows/: ci.yml  deploy.yml
Docs/: prd.md
alembic/orchestrator/: alembic.ini  env.py
alembic/orchestrator/versions/: 20241221_1200_0001_create_comprehensive_database_schema.py  20241221_1201_0002_create_brand_config_drift_model_tables.py  20241221_1202_0003_create_model_version_tracking_tables.py
configs/: processing.yaml
configs/brands/: economist.yaml  generic.yaml  time.yaml  vogue.yaml
configs/ocr/: ocr.yaml
data_management/: __init__.py  benchmarks.py  brand_model_manager.py  experiment_tracking.py  ingestion.py  model_training.py  schema_validator.py  synthetic_generator.py
evaluation_service/: Dockerfile  __init__.py  docker-compose.yml  drift_detector.py  evaluation_service.py  main.py  models.py  requirements.txt  schemas.py
examples/: advanced_layout_understanding.py  article_reconstruction_demo.py  graph_usage.py  xml_output_demo.py
experiments/: experiments.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/grafana/datasources/: prometheus.yml
monitoring/rules/: magazine_extractor.yml
parameter_management/: __init__.py  api.py  default_parameters.py  initialization.py  migrator.py  models.py  service.py
schemas/: article-v1.0.xsd
scripts/: config_cli.py  create_test_data.py  demo_layoutlm_system.py  init-db.sql  run_benchmarks.py  train_all_brands.py  train_economist.py  train_generalist.py  train_newsweek.py  train_time.py  train_vogue.py  validate_datasets.py
self_tuning/: __init__.py  api.py  models.py  service.py
services/evaluation/: Dockerfile  README.md  __init__.py  main.py
services/evaluation/api/: accuracy.py  drift.py  gold_sets.py  health.py  tuning.py
services/evaluation/core/: __init__.py  config.py  database.py
services/model_service/: Dockerfile  README.md  __init__.py  main.py
services/model_service/api/: articles.py  contributors.py  health.py  images.py  layout.py  ocr.py
services/model_service/core/: __init__.py  config.py  model_manager.py
services/orchestrator/: Dockerfile  README.md  celery_app.py  main.py
services/orchestrator/api/: config.py  health.py  jobs.py
services/orchestrator/core/: __init__.py  config.py  database.py  logging.py  workflow.py
shared/: __init__.py
shared/caption_matching/: __init__.py  analyzer.py  filename_generator.py  matcher.py  orchestrator.py  resolver.py  types.py
shared/config/: __init__.py  brand_loader.py  manager.py  validator.py
shared/extraction/: __init__.py  classifier.py  edge_cases.py  extractor.py  normalizer.py  optimizer.py  patterns.py  types.py
shared/graph/: __init__.py  factory.py  graph.py  nodes.py  types.py  visualizer.py
shared/layout/: __init__.py  analyzer.py  classifier.py  layoutlm.py  layoutlm_production.py  optimizer.py  types.py  understanding.py  visualizer.py
shared/ocr/: __init__.py  confidence.py  detector.py  engine.py  preprocessing.py  strategy.py  types.py  wer.py
shared/pdf/: __init__.py  image_extractor.py  metadata_extractor.py  splitter.py  text_extractor.py  types.py  utils.py  validator.py
shared/reconstruction/: __init__.py  reconstructor.py  resolver.py  traversal.py  types.py
shared/schemas/: __init__.py  articles.py  contributors.py  evaluation.py  images.py  job.py  layout.py  ocr.py
shared/types/: __init__.py  common.py
shared/xml_output/: __init__.py  converter.py  formatter.py  types.py  validator.py
synthetic_data/: __init__.py  accuracy_calculator.py  content_factory.py  generator.py  ground_truth.py  layout_engine.py  pdf_renderer.py  types.py  variations.py
tests/: conftest.py  test_reconstruction.py
tests/evaluation/: __init__.py
tests/integration/: test_end_to_end_pipeline.py
tests/model_service/: __init__.py
tests/shared/: test_config_system.py  test_pdf_utilities.py
tools/: README.md  annotation_workflow.py  dataset_curator.py  ground_truth_generator.py  validation_pipeline.py
(+9 files in other folders)
